--- a/public/components/hero.html
+++ b/public/components/hero.html
@@ -1,7 +1,7 @@
 <section id="home" class="relative text-white text-center">
         <img
           id="cover-photo"
-          src="https://i.imgur.com/3CRs4O4.jpeg"
+          src="images/galway-folk-festival.png"
           alt="A group of people playing instruments like guitars and ukuleles by a river in Galway."
           class="w-full h-[70vh] object-cover"
         />
