--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -3,7 +3,7 @@
         <div class="flex justify-center items-start space-x-6 mb-4">
           <div class="text-center">
             <a
-              href="https://www.facebook.com/groups/11667S5615376726"
+              href="https://www.facebook.com/groups/116675615376726"
               target="_blank"
               class="text-white hover:text-accent transition duration-300"
             >
@@ -62,7 +62,7 @@
             </svg>
           </a>
         </div>
-        <p>© 2025 Galway Jam Circle. v1.5. All Rights Reserved.</p>
+        <p>© <span id="copyright-year">2025</span> Galway Jam Circle. v1.5. All Rights Reserved.</p>
         <p class="text-sm text-stone-400 mt-2">
           Bringing music to the people of Galway.
         </p>
