--- a/public/components/format.html
+++ b/public/components/format.html
@@ -1,5 +1,5 @@
 <section id="format" class="py-16 md:py-20 lg:py-24 bg-white">
-  <div class="container mx-auto px-4 sm:px-6">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <h2 class="text-3xl md:text-4xl lg:text-5xl font-bold text-center text-primary mb-12 font-secondary">
       Our Jam Format
     </h2>
